# rust-log-analyzer

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE  Readme.md  index.html  zizmor.yml
.github/workflows/: main.yml
log-viewer/: ansi_up.js  index.html
src/: extract.rs  github.rs  lib.rs  log_variables.rs  sanitize.rs  travis.rs
src/ci/: actions.rs  azure.rs  mod.rs  travis.rs
src/index/: mod.rs  storage.rs  table.rs
tests/: test.rs  test_missing_line.txt
