[package]
name = "rust-log-analyzer"
version = "0.1.0"
authors = ["Rust Project Developers"]
license = "MIT"

[dependencies]
aho-corasick = "0.6"
atomicwrites = "0.2"
bincode = "1.0"
brotli = "1.2"
clap = "2.31"
digest = "0.7"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
fnv = "1.0"
hex = "0.3"
hmac = "0.6"
hyper = "0.11"
lazy_static = "1.0"
log = "0.4"
regex = "0.2"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha-1 = "0.7"
walkdir = "2.1"
