[package]
name = "rust-log-analyzer"
version = "0.1.0"
authors = ["Rust Project Developers"]
license = "MIT"
edition = "2018"

[dependencies]
aho-corasick = "0.6"
atomicwrites = "0.2"
bincode = "1.0"
brotli = "1.2"
digest = "0.7"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
fnv = "1.0"
hex = "0.3"
hmac = "0.6"
hyper = "0.12"
lazy_static = "1.0"
log = "0.4"
regex = "0.2"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha-1 = "0.7"
walkdir = "2.1"
structopt = "0.2.16"
dotenv = "0.14"
crossbeam = "0.7"
