[package]
name = "rust-log-analyzer"
version = "0.1.0"
authors = ["Rust Project Developers"]
license = "MIT"
edition = "2021"

[dependencies]
aho-corasick = "0.7"
atomicwrites = "0.4"
bincode = "1.0"
brotli = "3.3"
failure = "0.1"
futures = "0.3"
fnv = "1.0"
hex = "0.4"
hmac = "0.12"
hyper = { version = "0.14.25", features = ["http1", "server", "runtime"] }
lazy_static = "1.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "0.10"
walkdir = "2.1"
dotenv = "0.15"
crossbeam = "0.8"
percent-encoding = "2.1.0"
threadpool = "1.8.1"
tracing = "0.1.16"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
atty = "0.2.14"
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "rt"] }
